--- a/game1.html
+++ b/game1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" onclick="jump()">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Jump Game</title>
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="game">
-        <!-- Code here ! --> 
+        <div id="character"></div>
+        <div id="block"></div>
     </div>
 </body>
 <script src="script.js"></script>
