--- a/game1.html
+++ b/game1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="game">
-        <!-- I've created two divisions and I added their respective identifiers. Now I can point to them from the JS file -->
+        <!-- MR CARLOS 21st November:  I've created two divisions and I added their respective identifiers. Now I can point to them from the JS file -->
         <div id="character"></div>
         <div id="block"></div>
     </div>
