--- a/game1.html
+++ b/game1.html
@@ -11,6 +11,9 @@
         <!-- MR CARLOS 21st November:  I've created two divisions and I added their respective identifiers. Now I can point to them from the JS file -->
         <div id="character"></div>
         <div id="block"></div>
+        <!-- MR CARLOS 3rd December: Added the Span section for the counter of the points -->
+        <br>
+    <p>Score: <span id="scoreSpan"></span></p>
     </div>
 </body>
 <script src="script.js"></script>
